--- a/res/layout/activity_fullscreen.xml
+++ b/res/layout/activity_fullscreen.xml
@@ -50,6 +50,13 @@
                 android:layout_weight="1"
                 android:text="Home" />
         </LinearLayout>
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button" />
+
     </FrameLayout>
 
 </FrameLayout>
